Fix format for references: - Add colons between author names and the year of publication in inline references. - Add semicolons between references with multiple publications - Update capitalization in .bib file so that titles are in title case, proper nouns are protected.

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,11 +1,11 @@
 
 @article{kamoskeLeafAreaDensity2019,
-	title = {Leaf area density from airborne {LiDAR}: Comparing sensors and resolutions in a temperate broadleaf forest ecosystem},
+	title = {Leaf Area Density from Airborne {LiDAR}: Comparing Sensors and Resolutions in a Temperate Broadleaf Forest Ecosystem},
 	volume = {433},
 	issn = {03781127},
 	url = {https://linkinghub.elsevier.com/retrieve/pii/S0378112718315561},
 	doi = {10.1016/j.foreco.2018.11.017},
-	shorttitle = {Leaf area density from airborne {LiDAR}},
+	shorttitle = {Leaf Area Density From Airborne {LiDAR}},
 	abstract = {Forest processes that play an essential role in carbon sequestration, such as light use eﬃciency, photosynthetic capacity, and trace gas exchange, are closely tied to the three-dimensional structure of forest canopies. However, the vertical distribution of leaf traits is not uniform; leaves at varying vertical positions within the canopy are physiologically unique due to diﬀering light and environmental conditions, which leads to higher carbon storage than if light conditions were constant throughout the canopy. Due to this within-canopy variation, three-dimensional structural traits are critical to improving our estimates of global carbon cycling and storage by Earth system models and to better understanding the eﬀects of disturbances on carbon sequestration in forested ecosystems. In this study, we describe a reproducible and open-source methodology using the R programming language for estimating leaf area density ({LAD}; the total leaf area per unit of volume) from airborne {LiDAR}. Using this approach, we compare {LAD} estimates at the Smithsonian Environmental Research Center in Maryland, {USA}, from two airborne {LiDAR} systems, {NEON} {AOP} and {NASA} G-{LiHT}, which diﬀer in survey and instrument speciﬁcations, collections goals, and laser pulse densities. Furthermore, we address the impacts of the spatial scale of analysis as well as diﬀerences in canopy penetration and pulse density on {LAD} and leaf area index ({LAI}) estimates, while oﬀering potential solutions to enhance the accuracy of these estimates. {LAD} estimates from airborne {LiDAR} can be used to describe the three-dimensional structure of forests across entire landscapes. This information can help inform forest management and conservation decisions related to the estimation of aboveground biomass and productivity, the response of forests to large-scale disturbances, the impacts of drought on forest health, the conservation of bird habitat, as well as a host of other important forest processes and responses.},
 	pages = {364--375},
 	journaltitle = {Forest Ecology and Management},
@@ -18,13 +18,13 @@
 }
 
 @article{mcelhinnyForestWoodlandStand2005,
-	title = {Forest and woodland stand structural complexity: Its definition and measurement},
+	title = {Forest and Woodland Stand Structural Complexity: Its Definition and Measurement},
 	volume = {218},
 	rights = {https://www.elsevier.com/tdm/userlicense/1.0/},
 	issn = {03781127},
 	url = {https://linkinghub.elsevier.com/retrieve/pii/S0378112705005001},
 	doi = {10.1016/j.foreco.2005.08.034},
-	shorttitle = {Forest and woodland stand structural complexity},
+	shorttitle = {Forest and Woodland Stand Structural Complexity},
 	abstract = {This paper reviews the literature concerning forest and woodland structure at the scale of an individual stand. Stand structure is deﬁned in terms of structural attributes and stand structural complexity. Stand structural complexity is considered to be a measure of the number of different attributes present and the relative abundance of each of these attributes. The review indicates there is no deﬁnitive suite of structural attributes; different authors emphasise subsets of different attributes, and relatively few studies provide quantitative evidence linking attributes to the provision of faunal habitat or other measures of biodiversity, although a number of studies identify attributes that distinguish between successional stages. A summary of key structural attributes identiﬁed in the literature is presented under the following stand elements: foliage arrangement, canopy cover, tree diameter, tree height, tree spacing, tree species, stand biomass, understorey vegetation, and deadwood. Indices of structural complexity are also reviewed. Three types of index framework are identiﬁed: indices based on the cumulative score of attributes; indices based on the average score of groups of attributes; and indices based on the interaction of attributes. The review identiﬁes a variety of different indices under each of these frameworks with no single index preferred over the others. The most prominent of these indices are discussed in detail and the following guidelines suggested for the development of an index of structural complexity: (1) Start with a comprehensive set of structural attributes, in which there is a demonstrated association between attributes and the elements of biodiversity that are of interest. (2) Use a simple mathematical system to construct the index; this facilitates the use of multiple attributes and interpretation of the index in terms of real stand conditions. (3) Score attributes relative to the range of values occurring in stands of a comparable vegetation community. (4) Try different weightings of attributes in the index, adopting those weightings which most clearly distinguish between stands.},
 	pages = {1--24},
 	number = {1},
@@ -38,7 +38,7 @@
 }
 
 @article{drakeEstimationTropicalForest2002,
-	title = {Estimation of tropical forest structural characteristics using large-footprint lidar},
+	title = {Estimation of Tropical Forest Structural Characteristics Using Large-footprint Lidar},
 	volume = {79},
 	rights = {https://www.elsevier.com/tdm/userlicense/1.0/},
 	issn = {00344257},
@@ -57,7 +57,7 @@
 }
 
 @report{dealmeidaLeafRCalculatesLeaf2021,
-	title = {{leafR}: Calculates the leaf area index ({LAD}) and other related functions},
+	title = {{leafR}: Calculates the Leaf Area Index ({LAD}) and Other Related Functions},
 	url = {https://CRAN.R-project.org/package=leafR},
 	type = {manual},
 	author = {de Almeida, Danilo Roberti Alves and Stark, Scott Christopher and Silva, Carlos Alberto and Hamamura, Caio and Valbuena, Ruben},
@@ -65,7 +65,7 @@
 }
 
 @report{rousselAirborneLiDARData2024,
-	title = {Airborne {LiDAR} data manipulation and visualization for forestry applications},
+	title = {Airborne {LiDAR} Data Manipulation and Visualization for Forestry Applications},
 	url = {https://cran.r-project.org/package=lidR},
 	type = {manual},
 	author = {Roussel, Jean-Romain and Auty, David},
@@ -73,7 +73,7 @@
 }
 
 @article{rousselLidRPackageAnalysis2020a,
-	title = {{lidR}: An R package for analysis of Airborne Laser Scanning ({ALS}) data},
+	title = {{lidR}: An {R} Package For Analysis of Airborne Laser Scanning ({ALS}) Data},
 	volume = {251},
 	issn = {00344257},
 	url = {https://linkinghub.elsevier.com/retrieve/pii/S0034425720304314},
@@ -145,15 +145,15 @@
 }
 
 @misc{globalmapper,
-	title = {Global mapper: {GIS} and mapping software},
+	title = {Global Mapper: {GIS} and Mapping Software},
 	url = {https://www.bluemarblegeo.com/global-mapper/},
 	author = {{Blue Marble Geographics}},
 	date = {2024},
 }
 
 @misc{fusion,
-	title = {{FUSION}/{LDV}: {LiDAR} processing and visualization software},
+	title = {{FUSION}/{LDV}: {LiDAR} Processing and Visualization Software},
 	url = {https://research.fs.usda.gov/pnw/products/dataandtools/tools/fusion/ldv-lidar-processing-and-visualization-software-version-4.40},
-	author = {{McGaughey}, Robert},
+	author = {{McGaughey}, {Robert}},
 	date = {2022},
 }
