Update references and acknowledgements in paper
Added new references and acknowledged the National Science Foundation award. This enhances the credibility of the research and indicates additional funding sources and recognition.

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,6 +1,6 @@
 
 @article{kamoskeLeafAreaDensity2019,
-	title = {Leaf Area Density from Airborne {LiDAR}: Comparing Sensors and Resolutions in a Temperate Broadleaf Forest Ecosystem},
+	title = {Leaf area density from airborne {LiDAR}: Comparing sensors and resolutions in a temperate broadleaf forest ecosystem},
 	volume = {433},
 	issn = {03781127},
 	url = {https://linkinghub.elsevier.com/retrieve/pii/S0378112718315561},
@@ -18,7 +18,7 @@
 }
 
 @article{mcelhinnyForestWoodlandStand2005,
-	title = {Forest and Woodland Stand Structural Complexity: Its Definition and Measurement},
+	title = {Forest and woodland stand structural complexity: Its definition and measurement},
 	volume = {218},
 	rights = {https://www.elsevier.com/tdm/userlicense/1.0/},
 	issn = {03781127},
@@ -38,7 +38,7 @@
 }
 
 @article{drakeEstimationTropicalForest2002,
-	title = {Estimation of Tropical Forest Structural Characteristics Using Large-footprint Lidar},
+	title = {Estimation of tropical forest structural characteristics using large-footprint lidar},
 	volume = {79},
 	rights = {https://www.elsevier.com/tdm/userlicense/1.0/},
 	issn = {00344257},
@@ -57,7 +57,7 @@
 }
 
 @report{dealmeidaLeafRCalculatesLeaf2021,
-	title = {{leafR}: Calculates the Leaf Area Index ({LAD}) and Other Related Functions},
+	title = {{leafR: Calculates the Leaf Area Index (LAD) and Other Related Functions}},
 	url = {https://CRAN.R-project.org/package=leafR},
 	type = {manual},
 	author = {de Almeida, Danilo Roberti Alves and Stark, Scott Christopher and Silva, Carlos Alberto and Hamamura, Caio and Valbuena, Ruben},
@@ -73,7 +73,7 @@
 }
 
 @article{rousselLidRPackageAnalysis2020a,
-	title = {{lidR}: An {R} Package For Analysis of Airborne Laser Scanning ({ALS}) Data},
+	title = {{lidR}: An {R} package for analysis of {Airborne Laser Scanning} ({ALS}) data},
 	volume = {251},
 	issn = {00344257},
 	url = {https://linkinghub.elsevier.com/retrieve/pii/S0034425720304314},
@@ -91,7 +91,7 @@
 }
 
 @article{hurlbertNonconceptSpeciesDiversity1971,
-	title = {The Nonconcept of Species Diversity: A Critique and Alternative Parameters},
+	title = {{The Nonconcept of Species Diversity: A Critique and Alternative Parameters}},
 	volume = {52},
 	rights = {http://onlinelibrary.wiley.com/{termsAndConditions}\#vor},
 	issn = {0012-9658, 1939-9170},
@@ -156,4 +156,100 @@
 	url = {https://research.fs.usda.gov/pnw/products/dataandtools/tools/fusion/ldv-lidar-processing-and-visualization-software-version-4.40},
 	author = {{McGaughey}, {Robert}},
 	date = {2022},
+}
+
+@article{pascualRoleImprovedGround2020,
+	title = {{The Role of Improved Ground Positioning and Forest Structural Complexity When Performing Forest Inventory Using Airborne Laser Scanning}},
+	volume = {12},
+	rights = {https://creativecommons.org/licenses/by/4.0/},
+	issn = {2072-4292},
+	url = {https://www.mdpi.com/2072-4292/12/3/413},
+	doi = {10.3390/rs12030413},
+	abstract = {The level of spatial co-registration between airborne laser scanning ({ALS}) and ground data can determine the goodness of the statistical inference used in forest inventories. The importance of positioning methods in the ﬁeld can increase, depending on the structural complexity of forests. An area-based approach was followed to conduct forest inventory over seven National Forest Inventory ({NFI}) forest strata in Spain. The beneﬁt of improving the co-registration goodness was assessed through model transferability using low- and high-accuracy positioning methods. Through the inoptimality losses approach, we evaluated the value of good co-registered data, while assessing the inﬂuence of forest structural complexity. When using good co-registered data in the 4th {NFI}, the mean tree height ({HTmean}), stand basal area (G) and growing stock volume (V) models were 2.6\%, 10.6\% and 14.7\% (in terms of root mean squared error, {RMSE} \%), lower than when using the coordinates from the 3rd {NFI}. Transferring models built under poor co-registration conditions using more precise data improved the models, on average, 0.3\%, 6.0\% and 8.8\%, while the worsening eﬀect of using low-accuracy data with models built in optimal conditions reached 4.0\%, 16.1\% and 16.2\%. The value of enhanced data co-registration varied between forests. The usability of current {NFI} data under modern forest inventory approaches can be restricted when combining with {ALS} data. As this research showed, investing in improving co-registration goodness over a set of samples in {NFI} projects enhanced model performance, depending on the type of forest and on the assessed forest attributes.},
+	pages = {413},
+	number = {3},
+	journaltitle = {Remote Sensing},
+	shortjournal = {Remote Sensing},
+	author = {Pascual, Adrián and Guerra-Hernández, Juan and Cosenza, Diogo N. and Sandoval, Vicente},
+	urldate = {2024-09-29},
+	date = {2020-01-28},
+	langid = {english},
+	file = {PDF:/Users/iosefa/Zotero/storage/KMBUN8GT/Pascual et al. - 2020 - The Role of Improved Ground Positioning and Forest Structural Complexity When Performing Forest Inve.pdf:application/pdf},
+}
+
+@article{guerra-hernandezUsingBitemporalALS2024,
+	title = {Using bi-temporal {ALS} and {NFI}-based time-series data to account for large-scale aboveground carbon dynamics: {the} showcase of mediterranean forests},
+	volume = {57},
+	issn = {2279-7254},
+	url = {https://www.tandfonline.com/doi/full/10.1080/22797254.2024.2315413},
+	doi = {10.1080/22797254.2024.2315413},
+	shorttitle = {Using bi-temporal {ALS} and {NFI}-based time-series data to account for large-scale aboveground carbon dynamics},
+	abstract = {New remote-sensed biomass change products will transform our capacity to monitor and validate large-scale carbon dynamic in the next decade. In this study, we evaluated the use of multitemporal Airborne Laser Scanning ({ALS}) and the Climate Change Initiative ({CCI}) {BIOMASS} spaceborne mission to estimate {AGB} dynamics in different Mediterranean forest over an 8-year period (2010–2018). To do so, we evaluated different maps to estimate change in {AGB}, specifically indirect approach using forest-type specific {ALS}-based {AGB} maps using i) countrywide {ALS} coverage at 25 m resolution (2010–2018) and ii) the global, 100-m resolution {CCI} maps version 3 (2010–2018). The change in {AGB} (Δ{AGB}) was mapped across the study region to compute dynamics by forest type. Our results suggest that the indirect approach using {ALS}-model-based produced more accurate estimates in change of {AGB} than {CCI} when we compared with the design-based {AGB} estimation using Spanish National Forest Inventory ({SNFI}) at strata level. The spatial representation of the {AGB} change indicated that Δ{AGB}-{ALS} changes by forest type had an overall gain in biomass at regional level. The Δ{AGB} total and net annual changes by year and area (Δ{AGB}, Mg ha−1 year−1) were closed to the values obtained using {SNFI} at strata level. This study demonstrates the feasibility of enhancing carbon sequestration and stock capacity in Mediterranean forest using multitemporal {ALS} data and the limitations of global {AGB} maps at Regional Scale.},
+	pages = {2315413},
+	number = {1},
+	journaltitle = {European Journal of Remote Sensing},
+	shortjournal = {European Journal of Remote Sensing},
+	author = {Guerra-Hernández, Juan and Pascual, Adrian and Tupinambá-Simões, Frederico and Godinho, Sergio and Botequim, Brigite and Jurado-Varela, Alfonso and Sandoval-Altelarrea, Vicente},
+	urldate = {2024-09-29},
+	date = {2024-12-31},
+	langid = {english},
+	file = {PDF:/Users/iosefa/Zotero/storage/T6WITC6F/Guerra-Hernández et al. - 2024 - Using bi-temporal ALS and NFI-based time-series data to account for large-scale aboveground carbon d.pdf:application/pdf},
+}
+
+@article{pascualIntegratedAssessmentCarbon2023,
+	title = {An integrated assessment of carbon emissions from forest fires beyond impacts on aboveground biomass. A showcase using airborne lidar and {GEDI} data over a megafire in Spain},
+	volume = {345},
+	issn = {03014797},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0301479723014974},
+	doi = {10.1016/j.jenvman.2023.118709},
+	pages = {118709},
+	journaltitle = {Journal of Environmental Management},
+	shortjournal = {Journal of Environmental Management},
+	author = {Pascual, Adrián and Guerra-Hernández, Juan},
+	urldate = {2024-09-29},
+	date = {2023-11},
+	langid = {english},
+	file = {PDF:/Users/iosefa/Zotero/storage/J3YBA8V6/Pascual and Guerra-Hernández - 2023 - An integrated assessment of carbon emissions from forest fires beyond impacts on aboveground biomass.pdf:application/pdf},
+}
+
+@article{pascualNewRemoteSensingbased2021a,
+	title = {A new remote sensing-based carbon sequestration potential index ({CSPI}): A tool to support land carbon management},
+	volume = {494},
+	issn = {03781127},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S037811272100431X},
+	doi = {10.1016/j.foreco.2021.119343},
+	shorttitle = {A new remote sensing-based carbon sequestration potential index ({CSPI})},
+	abstract = {Integrating remote sensing into assessments of carbon stocks and fluxes has advanced our understanding of how global change affects landscapes and our capacity to support decision making about forest management. However, there remains a lack of detailed and actionable analyses conducted across widely ranging environmental conditions that are appropriate for tactical planning. We used airborne laser scanning data and multi-source satellite imagery to estimate forest aboveground carbon density and gross primary production, and to map forest cover across the main Hawaiian Islands. We used these measures to develop the Carbon Sequestration Potential Index ({CSPI}), which identifies where the potential for carbon sequestration following afforestation would be highest within a complex landscape of 304 management units. Variation in {CSPI} was high across islands and between ecosystems, with low values for cool, dry and largely intact forest systems and high values for warm, wet and largely non-forested systems. The {CSPI} provided a rapid, spatially-explicit and actionable assessment of Hawaiian forest reserves, which can help stewardship agencies contribute to state carbon neutrality goals through climate-smart and science-driven prescriptions that encompass conservation to restoration.},
+	pages = {119343},
+	journaltitle = {Forest Ecology and Management},
+	shortjournal = {Forest Ecology and Management},
+	author = {Pascual, Adrián and Giardina, Christian P. and Selmants, Paul C. and Laramee, Leah J. and Asner, Gregory P.},
+	urldate = {2024-09-29},
+	date = {2021-08},
+	langid = {english},
+	file = {PDF:/Users/iosefa/Zotero/storage/6LHNKD22/Pascual et al. - 2021 - A new remote sensing-based carbon sequestration potential index (CSPI) A tool to support land carbo.pdf:application/pdf},
+}
+
+@misc{guerra-hernandezHighresolutionCanopyHeight2024,
+	title = {{High-resolution Canopy Height Model of Hawaii Island 2018-2020}},
+	rights = {Creative Commons Attribution 4.0 International},
+	url = {https://zenodo.org/doi/10.5281/zenodo.13151991},
+	doi = {10.5281/ZENODO.13151991},
+	abstract = {Forest canopy height model for Hawaii Island using lairborne lidar data collected by {NOAA} in 2018, 2019 and 2020. The maps are produced by year at the resolution of 1 m. The raw point cloud data had am average point cloud density of 8 pulses per squre m. https://noaa-nos-coastal-lidar-pds.s3.amazonaws.com/laz/geoid12b/9635/index.html
+
+{ALS} 2018 data was reprocessed using Lastools software to reclassify ground class (2)
+
+{ALS} 2019\_20 was also reprocessed using Lastools software to reclassify unclassified (1) points to vegetation (5)
+
+The {CHM}’s generation procedure is composed by four steps. It starts by the creation of 500m x 500m tiles using a 50m buffer, resorting to the lastile function, followed by the lasheight function that is used to compute the elevation of each point above the ground. Then, the lastile function is used again to remove the buffer from the normalised point clouds. These first three steps resort to the {LASTools} software. The fourth, and final step, consists in the generation of the {CHM} with a 1 m resolution resorting to the pit-free algorithm implemented in the rasterize\_canopy function from the {lidR} package.
+
+The file is a {GeoTIFF} with {LZW} compression in {ArcGIS} pro 3.3 
+
+{EPSG}:6635
+
+Use of these data requires citation of this dataset},
+	publisher = {Zenodo},
+	author = {Guerra-Hernandez, Juan and Pascual, Adrian},
+	urldate = {2024-09-29},
+	date = {2024-08-01},
 }
