--- a/docs/examples/getting-started.ipynb
+++ b/docs/examples/getting-started.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-20T09:26:40.870714Z",
@@ -12,7 +12,7 @@
    "outputs": [],
    "source": [
     "from pyforestscan.handlers import read_lidar, create_geotiff\n",
-    "from pyforestscan.visualize import plot_2d, plot_3d, plot_pai, plot_pad_2d\n",
+    "from pyforestscan.visualize import plot_2d, plot_pai, plot_pad_2d\n",
     "from pyforestscan.filters import filter_hag, remove_outliers_and_clean, classify_ground_points, filter_select_ground\n",
     "from pyforestscan.calculate import generate_dtm, assign_voxels, calculate_pad, calculate_pai, calculate_fhd, calculate_chm"
    ]
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
