--- a/docs/examples/working-with-large-point-clouds.ipynb
+++ b/docs/examples/working-with-large-point-clouds.ipynb
@@ -1,8 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Working with Large Point Clouds \n",
+    "This notebook will explain how use PyForestScan with large data sets. Code snippets for how to get started using PyForestScan or calculate key forest metrics can be found in the notebooks getting-started-importing-preprocessing-dtm-chm or calculate-forest-metrics, and in the documentation. \n",
+    "\n",
+    "We will use a larger section of our example data set. This section contains 2.35 billion points (20GB) with a nominal pulse spacing of 0.35 meters covering the Puuwaawaa reigion of the Big Island of Hawaii. The vegetation here is dry forest and we will clip to the same region as our other examples. This data is hosted on AWS, and can be read directly from AWS, but data can be stored and read locally.\n",
+    "\n",
+    "First we will load the necessary python packages and functions."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "start_time": "2024-11-28T07:25:39.175957Z"
@@ -13,10 +25,12 @@
    },
    "outputs": [],
    "source": [
+    "import geopandas as gpd\n",
+    "import numpy as np\n",
+    "\n",
     "from pyforestscan.handlers import read_lidar, create_geotiff, write_las\n",
-    "from pyforestscan.visualize import plot_2d, plot_pai, plot_pad_2d\n",
-    "from pyforestscan.filters import filter_hag, remove_outliers_and_clean, classify_ground_points, filter_select_ground\n",
-    "from pyforestscan.calculate import generate_dtm, assign_voxels, calculate_pad, calculate_pai, calculate_fhd, calculate_chm\n",
+    "from pyforestscan.visualize import plot_metric, plot_2d\n",
+    "from pyforestscan.calculate import assign_voxels, calculate_pad, calculate_pai, calculate_fhd, calculate_chm\n",
     "from pyforestscan.process import process_with_tiles"
    ]
   },
@@ -24,45 +38,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Notes\n",
-    "This example uses the test data which already actually has cleaned and classified ground points. However, for illustration, we will continue as if they were not. This data has also been down sampled using `downsample_poisson(arrays, 0.5)`. This down sampling affects all forest structure metrics as it thins the point cloud by a significant amount (1 random point every 50cm). Down sampling was done to have faster loads in testing and for storage in GitHub."
+    "## Import Data\n",
+    "PyForestScan leverages PDAL and Entwine to read EPT and COPC data formats. EPT and COPC are optimized for handling very large point clouds and have spatial knowlege of the data, allowing us to access metadata for the entire dataset while working with extracts. We will use this to extract only points that fit within the one kilometer tile that we explored in the other examples. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import geopandas as gpd\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "poly_path = \"/Users/iosefa/Desktop/test_poly.gpkg\"\n",
-    "poly = gpd.read_file(poly_path)\n",
-    "xmin, ymin, xmax, ymax = poly.total_bounds\n",
-    "bounds = ([xmin, xmax], [ymin, ymax])# \n",
     "bounds = ([202000.000, 203000.000], [2187999.980, 2189000.000]) #([xmin, xmax], [ymin, ymax])\n",
-    "ept = \"/Users/iosefa/ept/ept.json\"\n",
+    "ept = \"https://puuwaawa-ept.s3.us-west-1.amazonaws.com/ept/ept.json\"\n",
     "ept_srs = \"EPSG:32605\"\n",
-    "wkt = \"POLYGON ((198232 2186140.0000682883, 198232 2186139.5000682883, 198233 2186139.5000682883, 198233 2186140.0000682883, 198232 2186140.0000682883))\"\n",
-    "# wkt = poly[\"geometry\"][0].wkt\n",
-    "pointclouds = read_lidar(ept, ept_srs, bounds, hag=True, crop_poly=False, poly=wkt)\n",
-    "# pointclouds = read_lidar(\"data/20191210_5QKB020880.laz\", \"EPSG:32605\", bounds, hag=True)"
+    "pointclouds = read_lidar(ept, ept_srs, bounds, hag=True)"
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "pointclouds[0]['HeightAboveGround'].max()"
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pointclouds[0]['HeightAboveGround'].max()"
+   ]
   },
   {
    "cell_type": "code",
@@ -508,10 +507,10 @@
      "evalue": "name 'arrays' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[7], line 2\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m# arrays = filter_hag(arrays)\u001B[39;00m\n\u001B[0;32m----> 2\u001B[0m points \u001B[38;5;241m=\u001B[39m \u001B[43marrays\u001B[49m[\u001B[38;5;241m0\u001B[39m]\n",
-      "\u001B[0;31mNameError\u001B[0m: name 'arrays' is not defined"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# arrays = filter_hag(arrays)\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m points \u001b[38;5;241m=\u001b[39m \u001b[43marrays\u001b[49m[\u001b[38;5;241m0\u001b[39m]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'arrays' is not defined"
      ]
     }
    ],
@@ -540,11 +539,11 @@
      "evalue": "too many indices for array: array is 1-dimensional, but 2 were indexed",
      "output_type": "error",
      "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mIndexError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[9], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m chm \u001B[38;5;241m=\u001B[39m \u001B[43mcalculate_chm\u001B[49m\u001B[43m(\u001B[49m\u001B[43mpointclouds\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m0\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m10\u001B[39;49m\u001B[43m,\u001B[49m\u001B[38;5;241;43m10\u001B[39;49m\u001B[43m,\u001B[49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m \u001B[38;5;66;03m# calculate_chm(arr, voxel_resolution, interpolation=\"linear\")\u001B[39;00m\n",
-      "File \u001B[0;32m~/repos/PyForestScan/pyforestscan/calculate.py:229\u001B[0m, in \u001B[0;36mcalculate_chm\u001B[0;34m(arr, voxel_resolution, interpolation)\u001B[0m\n\u001B[1;32m    221\u001B[0m mask \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39misnan(chm)\n\u001B[1;32m    223\u001B[0m x_grid, y_grid \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39mmeshgrid(\n\u001B[1;32m    224\u001B[0m     (x_bins[:\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m] \u001B[38;5;241m+\u001B[39m x_bins[\u001B[38;5;241m1\u001B[39m:]) \u001B[38;5;241m/\u001B[39m \u001B[38;5;241m2\u001B[39m,\n\u001B[1;32m    225\u001B[0m     (y_bins[:\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m] \u001B[38;5;241m+\u001B[39m y_bins[\u001B[38;5;241m1\u001B[39m:]) \u001B[38;5;241m/\u001B[39m \u001B[38;5;241m2\u001B[39m\n\u001B[1;32m    226\u001B[0m )\n\u001B[1;32m    228\u001B[0m chm[mask] \u001B[38;5;241m=\u001B[39m griddata(\n\u001B[0;32m--> 229\u001B[0m     points\u001B[38;5;241m=\u001B[39m(\u001B[43mx\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m~\u001B[39;49m\u001B[43mmask\u001B[49m\u001B[43m]\u001B[49m, y[\u001B[38;5;241m~\u001B[39mmask]),\n\u001B[1;32m    230\u001B[0m     values\u001B[38;5;241m=\u001B[39mchm[\u001B[38;5;241m~\u001B[39mmask],\n\u001B[1;32m    231\u001B[0m     xi\u001B[38;5;241m=\u001B[39m(x_grid[mask], y_grid[mask]),\n\u001B[1;32m    232\u001B[0m     method\u001B[38;5;241m=\u001B[39minterpolation\n\u001B[1;32m    233\u001B[0m )\n\u001B[1;32m    235\u001B[0m extent \u001B[38;5;241m=\u001B[39m [x_min, x_max, y_min, y_max]\n\u001B[1;32m    237\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m chm, extent\n",
-      "\u001B[0;31mIndexError\u001B[0m: too many indices for array: array is 1-dimensional, but 2 were indexed"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m chm \u001b[38;5;241m=\u001b[39m \u001b[43mcalculate_chm\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpointclouds\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# calculate_chm(arr, voxel_resolution, interpolation=\"linear\")\u001b[39;00m\n",
+      "File \u001b[0;32m~/repos/PyForestScan/pyforestscan/calculate.py:229\u001b[0m, in \u001b[0;36mcalculate_chm\u001b[0;34m(arr, voxel_resolution, interpolation)\u001b[0m\n\u001b[1;32m    221\u001b[0m mask \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39misnan(chm)\n\u001b[1;32m    223\u001b[0m x_grid, y_grid \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mmeshgrid(\n\u001b[1;32m    224\u001b[0m     (x_bins[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m+\u001b[39m x_bins[\u001b[38;5;241m1\u001b[39m:]) \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m2\u001b[39m,\n\u001b[1;32m    225\u001b[0m     (y_bins[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m+\u001b[39m y_bins[\u001b[38;5;241m1\u001b[39m:]) \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m2\u001b[39m\n\u001b[1;32m    226\u001b[0m )\n\u001b[1;32m    228\u001b[0m chm[mask] \u001b[38;5;241m=\u001b[39m griddata(\n\u001b[0;32m--> 229\u001b[0m     points\u001b[38;5;241m=\u001b[39m(\u001b[43mx\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m~\u001b[39;49m\u001b[43mmask\u001b[49m\u001b[43m]\u001b[49m, y[\u001b[38;5;241m~\u001b[39mmask]),\n\u001b[1;32m    230\u001b[0m     values\u001b[38;5;241m=\u001b[39mchm[\u001b[38;5;241m~\u001b[39mmask],\n\u001b[1;32m    231\u001b[0m     xi\u001b[38;5;241m=\u001b[39m(x_grid[mask], y_grid[mask]),\n\u001b[1;32m    232\u001b[0m     method\u001b[38;5;241m=\u001b[39minterpolation\n\u001b[1;32m    233\u001b[0m )\n\u001b[1;32m    235\u001b[0m extent \u001b[38;5;241m=\u001b[39m [x_min, x_max, y_min, y_max]\n\u001b[1;32m    237\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m chm, extent\n",
+      "\u001b[0;31mIndexError\u001b[0m: too many indices for array: array is 1-dimensional, but 2 were indexed"
      ]
     }
    ],
@@ -705,7 +704,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
