--- a/docs/examples/getting-started-importing-preprocessing-dtm-chm.ipynb
+++ b/docs/examples/getting-started-importing-preprocessing-dtm-chm.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-20T09:26:40.870714Z",
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "from pyforestscan.handlers import read_lidar, create_geotiff\n",
-    "from pyforestscan.visualize import plot_2d, plot_metric\n",
+    "from pyforestscan.visualize import plot_2d, plot_metric, plot_2d\n",
     "from pyforestscan.filters import filter_hag, remove_outliers_and_clean, classify_ground_points, filter_select_ground\n",
     "from pyforestscan.calculate import generate_dtm, assign_voxels, calculate_chm"
    ]
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
